more work on new QA mockup

--- a/mockups/partials/header.html
+++ b/mockups/partials/header.html
@@ -1,15 +1,15 @@
-<div class="container">
-  <div class="row align-items-center">
-    <div class="col-md-12 patchhead">
+<div class="container-fluid masthead">
+  <div class="row">
+    <div class="col-md-12 head">
       <img src="assets/img/patch.svg" alt="">
-      <h2>Aqua | The <strong>A</strong>mbulance <strong>Qu</strong>ality <strong>A</strong>ssurance System</h2>
+      <h2><strong>Aqua</strong> | The <strong>A</strong>mbulance <strong>Qu</strong>ality <strong>A</strong>ssurance System</h2>
     </div>
   </div>
-  <div class="row">
-    <nav class="nav nav-fill">
-      <a class="nav-item nav-link" href="#">Home</a>
-      <a class="nav-item nav-link" href="#">New QA</a>
-      <a class="nav-item nav-link" href="#">Settings</a>
-    </nav>
-  </div>
+</div>
+<div class="container">
+  <nav class="nav nav-fill nav-pills">
+    <a class="nav-item nav-link" href="#">Home</a>
+    <a class="nav-item nav-link active" href="#">New QA</a>
+    <a class="nav-item nav-link" href="#">Settings</a>
+  </nav>
 </div>
