--- a/mockups/assets/css/style.css
+++ b/mockups/assets/css/style.css
@@ -32,6 +32,10 @@
   height: 38px;
 }
 
+.select2-container--default .select2-selection--single {
+  display: block;
+}
+
 .select2-container--default .select2-selection--single .select2-selection__arrow {
   height: 36px;
 }
