--- a/mockups/assets/css/style.scss
+++ b/mockups/assets/css/style.scss
@@ -34,6 +34,9 @@
 
 .select2-container--default .select2-selection--single {
 
+  display: block;
+
+
   .select2-selection__arrow {
     height: 36px;
   }
