--- a/mockups/partials/header.html
+++ b/mockups/partials/header.html
@@ -1,4 +1,5 @@
-<div class="container-fluid masthead">
+<header>
+  <div class="container-fluid masthead">
   <div class="row">
     <div class="col-md-12 head">
       <img src="assets/img/patch.svg" alt="">
@@ -13,3 +14,4 @@
     <a class="nav-item nav-link" href="#">Settings</a>
   </nav>
 </div>
+</header>
