--- a/mockups/partials/js.html
+++ b/mockups/partials/js.html
@@ -1,7 +1,8 @@
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
   $(".tic").select2();
@@ -43,13 +44,27 @@ $(document).ready(function() {
     $(".preceptor").select2().val(e.params.data.text).trigger("change");
     $("#no_preceptor").prop("disabled", false);
   });
-});
 
+  $.validate();
+});
 
 $("#no_preceptor").on("click", function () {
   $(".preceptor900number").select2().val("").trigger("change");
   $(".preceptor").select2().val("").trigger("change");
   $("#no_preceptor").prop("disabled", true);
+});
+
+$("form").submit(function(e) {
+  e.preventDefault();
+  var set = false;
+  $("#determinants > label").each( function() {
+   if ($(this).hasClass("active")) {set = true;}
+  });
+  if (!set) {
+    $("#determinants").parent().append('<span class="help-block form-error">This is a required field</span>');
+  } else {
+    $("#determinants").parent().children(".help-block").remove();
+  }
 });
 
 </script>
