--- a/mockups/assets/css/style.css
+++ b/mockups/assets/css/style.css
@@ -74,7 +74,12 @@ label {
 
 .form-error {
   font-size: 12px;
-  text-align: left;
+}
+
+@media (min-width: 768px) {
+  .form-error {
+    text-align: left;
+  }
 }
 
 footer .row {
