--- a/mockups/assets/css/style.scss
+++ b/mockups/assets/css/style.scss
@@ -73,7 +73,9 @@ label {
 
 .form-error {
   font-size: 12px;
-  text-align: left;
+  @media (min-width: 768px) {
+    text-align: left;
+  }
 }
 
 footer .row {
