more pretty determinant validation error styling

--- a/mockups/assets/css/style.css
+++ b/mockups/assets/css/style.css
@@ -82,6 +82,11 @@ label {
   }
 }
 
+.determinants-error {
+  background-color: #b94a48;
+  border-color: #b94a48;
+}
+
 footer .row {
   background-color: #d13732;
   color: white;
