--- a/mockups/assets/css/style.scss
+++ b/mockups/assets/css/style.scss
@@ -78,6 +78,11 @@ label {
   }
 }
 
+.determinants-error {
+  background-color: #b94a48;
+  border-color: #b94a48;
+}
+
 footer .row {
   background-color: $rpia-red;
   color: white;
