--- a/mockups/partials/header.html
+++ b/mockups/partials/header.html
@@ -9,9 +9,9 @@
 </div>
 <div class="container">
   <nav class="nav nav-fill nav-pills">
-    <a class="nav-item nav-link" href="#">Home</a>
-    <a class="nav-item nav-link active" href="#">New QA</a>
-    <a class="nav-item nav-link" href="#">Settings</a>
+    <a class="nav-item nav-link" href="home.php">Home</a>
+    <a class="nav-item nav-link" href="new_qa.php">New QA</a>
+    <a class="nav-item nav-link" href="admin.php">Settings</a>
   </nav>
 </div>
 </header>
