--- a/mockups/partials/js.html
+++ b/mockups/partials/js.html
@@ -1,73 +1,3 @@
-<script src="//code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-  $(".tic").select2();
-  $(".tic").select2({
-    placeholder: "Tech-in-charge",
-    allowClear: true
-  });
-  $("#tic").on("select2:select", function (e) {
-    $(".900number").select2().val(e.params.data.text).trigger("change");
-  });
-
-
-  $(".900number").select2();
-  $(".900number").select2({
-    placeholder: "900",
-    allowClear: true
-  });
-  $("#900number").on("select2:select", function (e) {
-    $(".tic").select2().val(e.params.data.text).trigger("change");
-  });
-
-  $(".preceptor").select2();
-  $(".preceptor").select2({
-    placeholder: "Preceptor",
-    allowClear: true
-  });
-  $("#preceptor").on("select2:select", function (e) {
-    $(".preceptor900number").select2().val(e.params.data.text).trigger("change");
-    $("#no_preceptor").prop("disabled", false);
-  });
-
-
-  $(".preceptor900number").select2();
-  $(".preceptor900number").select2({
-    placeholder: "900",
-    allowClear: true
-  });
-  $("#preceptor900number").on("select2:select", function (e) {
-    $(".preceptor").select2().val(e.params.data.text).trigger("change");
-    $("#no_preceptor").prop("disabled", false);
-  });
-
-  $.validate();
-});
-
-$("#no_preceptor").on("click", function () {
-  $(".preceptor900number").select2().val("").trigger("change");
-  $(".preceptor").select2().val("").trigger("change");
-  $("#no_preceptor").prop("disabled", true);
-});
-
-$("form").submit(function(e) {
-  e.preventDefault();
-  var set = false;
-  $("#determinants > label").each( function() {
-   if ($(this).hasClass("active")) {set = true;}
-  });
-  if (!set && !($("#determinants").parent().children(".help-block").length)) {
-    $("#determinants").parent().append('<span class="help-block form-error">This is a required field</span>');
-    $("#determinants").children("label").addClass("determinants-error");
-  } else {
-    $("#determinants").parent().children(".help-block").remove();
-    $("#determinants").children("label").removeClass("determinants-error");
-
-  }
-});
-
-</script>
