upgrade to Angular 6

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -9,9 +9,9 @@
 </div>
 <div class="container">
   <nav class="nav nav-fill nav-pills">
-    <a class="nav-item nav-link" href="home.php">Home</a>
-    <a class="nav-item nav-link" href="new_qa.php">New QA</a>
-    <a class="nav-item nav-link" href="admin.php">Settings</a>
+    <a class="nav-item nav-link" routerLink="/Home" routerLinkActive="active">Home</a>
+    <a class="nav-item nav-link" routerLink="/NewQA" routerLinkActive="active">New QA</a>
+    <a class="nav-item nav-link" routerLink="/Settings" routerLinkActive="active">Settings</a>
   </nav>
 </div>
 </div>
