--- a/angular/src/app/newQA/newQA.component.html
+++ b/angular/src/app/newQA/newQA.component.html
@@ -1,10 +1,16 @@
-<form autocomplete="off" novalidate>
+<form name="qa_form" autocomplete="off" novalidate>
     <div class="container">
       <h4>Call information</h4>
       <div class="row">
         <div class="form-group col-md-3">
           <label for="date">Call date</label>
-          <input type="date" class="form-control" [(ngModel)]="qa.date" name="qaDate" id="date">
+          <div class="input-group">
+            <input class="form-control" placeholder="yyyy-mm-dd"
+              name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-secondary" (click)="d.toggle()" type="button"><fa name="calendar"></fa></button>
+              </div>
+            </div>
         </div>
         <div class="form-group col-md-2">
           <label for="prid">PRID</label>
@@ -16,27 +22,27 @@
         </div>
         <div class="form-group col-md-3 text-center">
           <label>&nbsp;</label>
-          <div class="btn-group btn-group-toggle" name="determinant"  id="determinants">
-            <label class="btn btn-secondary" [ngClass]="{'active': isActive-A}">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantA" (click)="activateButton($event)" value="A" autocomplete="off" required> A
+          <div class="btn-group btn-group-toggle" ngbRadioGroup name="determinant" [(ngModel)]="determinant">
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="0"> A
             </label>
-            <label class="btn btn-secondary">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantB" [ngClass]="{'active': isActive}" (click)="activateButton()" value="B" autocomplete="off"> B
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="1"> B
             </label>
-            <label class="btn btn-secondary">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantC" [ngClass]="{'active': isActive}" (click)="activateButton()" value="C" autocomplete="off"> C
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="2"> C
             </label>
-            <label class="btn btn-secondary">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantD" [ngClass]="{'active': isActive}" (click)="activateButton()" value="D" autocomplete="off"> D
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="3"> D
             </label>
-            <label class="btn btn-secondary">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantE" [ngClass]="{'active': isActive}" (click)="activateButton()" value="E" autocomplete="off"> E
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="4"> E
             </label>
-            <label class="btn btn-secondary">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantFI" [ngClass]="{'active': isActive}" (click)="activateButton()" value="FI" autocomplete="off"> F/I
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="5"> Field Init.
             </label>
-            <label class="btn btn-secondary">
-              <input type="radio" [(ngModel)]="qa.determinant" name="determinant" id="determinantS" [ngClass]="{'active': isActive}" (click)="activateButton()" value="S" autocomplete="off"> S
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="radio" [value]="6"> Stby.
             </label>
           </div>
         </div>
@@ -77,8 +83,12 @@
           </select>
         </div>
         <div class="col-md-2 no-preceptor text-center">
-          <label>&nbsp;</label>
-          <input type="check" [(ngModel)]="qa.noPrec" name="qaNoPrec" class="btn btn-secondary" id="no_preceptor" disabled>No preceptor
+          <label for="preceptor900number">&nbsp;</label>
+          <div class="btn-group btn-group-toggle" ngbRadioGroup name="noPrec" [(ngModel)]="qa.noPrec">
+            <label ngbButtonLabel class="btn-secondary">
+              <input ngbButton type="checkbox" [value]="1"> No Preceptor
+            </label>
+          </div>
         </div>
       </div>
       <hr>
@@ -95,12 +105,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn1" [value]="yes" name="q1y" id="Y1" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn1" [(ngModel)]="qa.yn1">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn1" [value]="no" name="q1n" id="N1" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -115,12 +125,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn2" [value]="yes" name="q2y" id="Y2" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn2" [(ngModel)]="qa.yn2">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn2" [value]="no" name="q2n" id="N2" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -135,15 +145,15 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn3" [value]="yes" name="q3y" id="Y3" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn3" [(ngModel)]="qa.yn3">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn3" [value]="no" name="q3n" id="N3" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn3" [value]="na" name="q3na" id="NA3" autocomplete="off"> N/A
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="2"> N/A
                 </label>
               </div>
             </div>
@@ -158,12 +168,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn4" [value]="yes" name="q4y" id="Y4" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn4" [(ngModel)]="qa.yn4">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn4" [value]="no" name="q4n" id="N4" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -183,12 +193,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input  type="radio" [(ngModel)]="qa.yn5" [value]="yes" name="q5y" id="Y5" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn5" [(ngModel)]="qa.yn5">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn5" [value]="no" name="q5n" id="N5" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -203,12 +213,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn6" [value]="yes" name="q6y" id="Y6" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn6" [(ngModel)]="qa.yn6">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn6" [value]="no" name="q6n" id="N6" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -228,12 +238,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn7" [value]="yes" name="q7y" id="Y7" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn7" [(ngModel)]="qa.yn7">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn7" [value]="no" name="q7n" id="N7" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -248,12 +258,12 @@
               </div>
             </div>
             <div class="col-sm-2 col-4 question-answer">
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn8" [value]="yes" name="q8y" id="Y8" autocomplete="off"> Y
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="yn8" [(ngModel)]="qa.yn8">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary">
-                  <input type="radio" [(ngModel)]="qa.yn8" [value]="no" name="q8n" id="N8" autocomplete="off"> N
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
@@ -271,12 +281,12 @@
           <div class="row">
             <div class="col-sm-12 form-group">
               <label for="flagged">Flagged for review</label>
-              <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-secondary btn-lg">
-                  <input type="radio" [(ngModel)]="qa.flagged" [value]="yes" name="flaggedy" id="flagged" autocomplete="off"> Yes
+              <div class="btn-group btn-group-toggle" ngbRadioGroup name="flagged" [(ngModel)]="qa.flagged">
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="1"> Yes
                 </label>
-                <label class="btn btn-secondary btn-lg">
-                  <input type="radio" [(ngModel)]="qa.flagged" [value]="no" name="flaggedn" id="flagged" autocomplete="off"> No
+                <label ngbButtonLabel class="btn-secondary">
+                  <input ngbButton type="radio" [value]="0"> No
                 </label>
               </div>
             </div>
