Added components, started mockup of home, other fixes

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -9,9 +9,9 @@
 </div>
 <div class="container">
   <nav class="nav nav-fill nav-pills">
-    <a class="nav-item nav-link" routerLink="/Home" routerLinkActive="active">Home</a>
-    <a class="nav-item nav-link" routerLink="/NewQA" routerLinkActive="active">New QA</a>
-    <a class="nav-item nav-link" routerLink="/Settings" routerLinkActive="active">Settings</a>
+    <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+    <a class="nav-item nav-link" routerLink="/new-qa" routerLinkActive="active">New QA</a>
+    <a class="nav-item nav-link" routerLink="/settings" routerLinkActive="active">Settings</a>
   </nav>
 </div>
 </div>
