--- a/angular/src/app/newQA/newQA.component.html
+++ b/angular/src/app/newQA/newQA.component.html
@@ -26,24 +26,6 @@
             <label ngbButtonLabel class="btn-secondary" *ngFor="let det of determinants">
               <input ngbButton type="radio" [value]="det.determinant_id"> {{det.abbreviation}}
             </label>
-            <!-- <label ngbButtonLabel class="btn-secondary">
-              <input ngbButton type="radio" [value]="1"> B
-            </label>
-            <label ngbButtonLabel class="btn-secondary">
-              <input ngbButton type="radio" [value]="2"> C
-            </label>
-            <label ngbButtonLabel class="btn-secondary">
-              <input ngbButton type="radio" [value]="3"> D
-            </label>
-            <label ngbButtonLabel class="btn-secondary">
-              <input ngbButton type="radio" [value]="4"> E
-            </label>
-            <label ngbButtonLabel class="btn-secondary">
-              <input ngbButton type="radio" [value]="5"> Field Init.
-            </label>
-            <label ngbButtonLabel class="btn-secondary">
-              <input ngbButton type="radio" [value]="6"> Stby.
-            </label> -->
           </div>
         </div>
       </div>
@@ -51,12 +33,18 @@
       <h4>Personnel</h4>
       <div class="row">
         <div class="form-group col-md-3">
-          <label for="tic">Tech-in-charge</label>
-          <select class="form-control tic" [(ngModel)]="qa.tic" name="tic" id="tic" placeholder="Tech-in-charge" data-validation="required">
-            <option></option>
-            <option value="987">Dan Bruce</option>
-            <option value="923">John Jacangelo</option>
-          </select>
+          <label for="typeahead-focus">Tech in charge:</label>
+            <input
+              id="typeahead-tic"
+              type="text"
+              name = "qa_tic"
+              class="form-control"
+              [(ngModel)]="qa.tic"
+              [ngbTypeahead]="search"
+              (focus)="focus$.next($event.target.value)"
+              (click)="click$.next($event.target.value)"
+              #instance="ngbTypeahead"
+            />
         </div>
         <div class="form-group col-md-2">
           <label for="900number">900 number</label>
@@ -67,12 +55,18 @@
           </select>
         </div>
         <div class="form-group col-md-3">
-          <label for="preceptor">Preceptor</label>
-          <select class="form-control preceptor" [(ngModel)]="qa.preceptor" name="preceptor" id="preceptor" placeholder="Preceptor">
-            <option></option>
-            <option value="987">Dan Bruce</option>
-            <option value="923">John Jacangelo</option>
-          </select>
+          <label for="typeahead-focus">Preceptor:</label>
+            <input
+              id="typeahead-prec"
+              type="text"
+              name = "qa_prec"
+              class="form-control"
+              [(ngModel)]="qa.preceptor"
+              [ngbTypeahead]="search"
+              (focus)="focus$.next($event.target.value)"
+              (click)="click$.next($event.target.value)"
+              #instance="ngbTypeahead"
+            />
         </div>
         <div class="form-group col-md-2">
           <label for="preceptor900number">900 number</label>
