Cleanup and fixes

--- a/angular/src/app/header/header.component.html
+++ b/angular/src/app/header/header.component.html
@@ -12,7 +12,7 @@
     <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
     <a class="nav-item nav-link" routerLink="/new-qa" routerLinkActive="active">New QA</a>
     <a class="nav-item nav-link" routerLink="/settings" routerLinkActive="active">Settings</a>
-    <label>Light</label><ui-switch></ui-switch><label>Dark</label>
+    <!-- <label>Light</label><ui-switch></ui-switch><label>Dark</label> -->
   </nav>
 </div>
 </div>
