--- a/angular/src/app/settings/settings.component.html
+++ b/angular/src/app/settings/settings.component.html
@@ -1,3 +1,118 @@
-<p>
-  settings works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          Add User
+        </div>
+        <div class="card-body">
+          <form name="qa_form" autocomplete="off" novalidate>
+            <h5 class="card-title">User information</h5>
+            <p class="card-text">Fill out for user personal information.</p>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">First Name</label>
+                    <input type="text" class="form-control" [(ngModel)]="user.first" name="user_first" id="user_first" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">Last Name</label>
+                    <input type="text" class="form-control" [(ngModel)]="user.last" name="user_last" id="user_last" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">900 Number</label>
+                    <input type="text" class="form-control" [(ngModel)]="user.nine" name="user_nine" id="user_nine" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">Email</label>
+                    <input type="email" class="form-control" [(ngModel)]="user.email" name="user_email" id="user_email" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <h5 class="card-title">Account information</h5>
+                <p class="card-text">Set the user&rsquo;s account information here</p>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">Username</label>
+                    <input type="text" class="form-control" [(ngModel)]="user.username" name="username" id="username" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">Password</label>
+                    <input type="password" class="form-control" [(ngModel)]="user.pass_og" name="pass_og" id="pass_og" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="form-group col-md-12">
+                    <label for="prid">Confirm Password</label>
+                    <input type="password" class="form-control" [(ngModel)]="user.pass_conf" name="pass_conf" id="pass_conf" placeholder="" data-validation="length" data-validation-length="8" data-validation-error-msg="PRID must be exactly 8 numbers long.">
+                  </div>
+                </div>
+                <h5 class="card-title">User Roles and Permissions</h5>
+                <p class="card-text">Set the user&rsquo;s account permissions</p>
+                <div class="row question">
+                  <div class="col-sm-6 col-7 question-text">
+                    <div class="form-check form-check-inline">
+                      <label class="form-check-label">Is this user an administrator?</label>
+                    </div>
+                  </div>
+                  <div class="col-sm-2 col-4 question-answer">
+                    <div class="btn-group btn-group-toggle" ngbRadioGroup name="user_admin" [(ngModel)]="user.admin">
+                      <label ngbButtonLabel class="btn-secondary">
+                        <input ngbButton type="radio" [value]="1"> Yes
+                      </label>
+                      <label ngbButtonLabel class="btn-secondary">
+                        <input ngbButton type="radio" [value]="0"> No
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row question">
+                  <div class="col-sm-6 col-7 question-text">
+                    <div class="form-check form-check-inline">
+                      <label class="form-check-label">Does this user do QA?</label>
+                    </div>
+                  </div>
+                  <div class="col-sm-2 col-4 question-answer">
+                    <div class="btn-group btn-group-toggle" ngbRadioGroup name="user_qa" [(ngModel)]="user.qa">
+                      <label ngbButtonLabel class="btn-secondary">
+                        <input ngbButton type="radio" [value]="1"> Yes
+                      </label>
+                      <label ngbButtonLabel class="btn-secondary">
+                        <input ngbButton type="radio" [value]="0"> No
+                      </label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row question">
+                  <div class="col-sm-6 col-7 question-text">
+                    <div class="form-check form-check-inline">
+                      <label class="form-check-label">Is this user a trainer?</label>
+                    </div>
+                  </div>
+                  <div class="col-sm-2 col-4 question-answer">
+                    <div class="btn-group btn-group-toggle" ngbRadioGroup name="user_prec" [(ngModel)]="user.prec">
+                      <label ngbButtonLabel class="btn-secondary">
+                        <input ngbButton type="radio" [value]="1"> Yes
+                      </label>
+                      <label ngbButtonLabel class="btn-secondary">
+                        <input ngbButton type="radio" [value]="0"> No
+                      </label>
+                    </div>
+                  </div>
+                </div>
+            </form>
+        </div>
+        <div class="col col-md-2 form-group text-center pull-right">
+          <label>&nbsp;</label>
+          <button type="submit" class="btn btn-success btn-lg" (click)="sendQA()" id="submit">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
